--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,7 +7,12 @@ AR    := ar rcs
 SRC_DIR = src
 INCLUDE_DIR = include
 
-SRCS = $(wildcard $(SRC_DIR)/*.c)
+SRCS = $(addprefix $(SRC_DIR)/, ft_atoi.c	ft_isascii.c	ft_memcmp.c     ft_putendl_fd.c ft_strcmp.c     ft_strlcpy.c    ft_strrchr.c \
+ft_bzero.c      ft_isdigit.c    ft_memcpy.c     ft_putnbr_fd.c  ft_strdup.c     ft_strlen.c     ft_strtrim.c \
+ft_calloc.c     ft_isprint.c    ft_memmove.c    ft_putstr_fd.c  ft_striteri.c   ft_strmapi.c    ft_substr.c \
+ft_isalnum.c    ft_itoa.c       ft_memset.c     ft_split.c      ft_strjoin.c    ft_strncmp.c    ft_tolower.c \
+ft_isalpha.c    ft_memchr.c     ft_putchar_fd.c ft_strchr.c     ft_strlcat.c    ft_strnstr.c    ft_toupper.c)
+
 OBJS = $(SRCS:.c=.o)
 INCLUDES = $(wildcard $(INCLUDE_DIR)/*)
 OBJ_DIR = $(addprefix obj/, $(notdir $(OBJS)))
